# core-autodeploy

backend/: Dockerfile  pyproject.toml
